Fix issue with math formula included in .nowrap img

--- a/wikipedia-dark.css
+++ b/wikipedia-dark.css
@@ -268,7 +268,8 @@
     }
 
     .mwe-math-fallback-image-inline img,
-    .mwe-math-element img {
+    .mwe-math-element img,
+    .nowrap img {
         filter: invert(100%);
     }
 
